# emotional-infrastructure-ct

./: ARCHITECTURE.md  Appendix_B_Metrics.md  Appendix_C_Key_Rotation_Runbook.md  CHANGELOG.md  CONTRIBUTING.md  CTP_Validation_Brief.md  DEVELOPER_GUIDE.md  Executive_Brief_CTP_Pilot.md  LICENSE  Pilot_Partner_Integration_Guide.md  README.md  RELEASE_NOTES_v0.1.md  SECURITY.md  SPEC.md  app.js  app.py  ctp-api.yaml  ctp-v0.1.yaml  docker-compose.yml  grafana_ctp_revocation_dashboard.json  issuer.py  ledger.sql  prometheus_alerts_ctp_slos.yaml  pyproject.toml  requirements.txt  sample-token.json  server.py  test_validation.py
.github/workflows/: python-package.yml  release.yml
tests/: test_smoke.py
